--- a/config/apatheticmobs.cfg
+++ b/config/apatheticmobs.cfg
@@ -1,5 +1,16 @@
 # Configuration file
 
+compatibility {
+    B:gaiaGuardian=false
+}
+
+
+ender_dragon {
+    B:dragonfly=false
+    B:dragonsit=false
+}
+
+
 general {
 
     "basic rules" {
@@ -12,7 +23,7 @@ general {
         B:"Blacklist or Whitelist Option"=true
 
         # If true, mod will only work on listed difficulties; if false, it will always work.
-        B:"Difficulty Lock Option"=true
+        B:"Difficulty Lock Option"=false
 
         # List of entities that will attack the player if blacklist is enabled.
         S:"Excluded Mobs" <
@@ -48,11 +59,11 @@ general {
         # If true, ender dragon will attack the player when flying.
         B:"Dragon Flying Attack Option"=true
 
-        # If true, ender dragon will attack the player when sitting—you should set this to true so you can get dragon's breath!
+        # If true, ender dragon will attack the player when sittingâ€”you should set this to true so you can get dragon's breath!
         B:"Dragon Sitting Attack Option"=true
 
         # If true, Gaia Guardian will send attacks at you and the magic floor will exist. If false, it will only spawn mobs.
-        B:"Gaia Attack Option"=true
+        B:"Gaia Attack Option"=false
 
         # If true, any mobs with the flag 'isBoss' will be ignored by this mod. So Eldritch Guardian, for example.
         B:"General Boss Option"=true
@@ -61,9 +72,31 @@ general {
         B:"Wither Attack Option"=true
 
         # If true, wither will take revenge.
-        B:"Wither Revenge Option"=true
+        B:"Wither Revenge Option"=false
     }
 
+}
+
+
+rules {
+    B:blacklist=true
+    S:difficulties <
+        easy
+     >
+    B:difficultyLock=true
+    S:exclusions <
+        minecraft:cow
+     >
+    S:inclusions <
+        minecraft:zombie
+     >
+    B:revenge=true
+}
+
+
+wither {
+    B:witherAttacks=false
+    B:witherRevenge=false
 }
 
 
