--- a/config/exnihilocreatio/ExNihiloCreatio.cfg
+++ b/config/exnihilocreatio/ExNihiloCreatio.cfg
@@ -117,6 +117,7 @@ exnihilocreatio {
         # Keeping this on false will only load recipes registered in code
         # This is recommended to enable for Packmakers
         # For players just playing with this without wanting to configure something this is recommended to keep disabled
+        # If you are having trouble reading custom json files I suggest using https://jsonlint.com/ to validate your files.
         B:enableJSONLoading=true
 
         # When attempting to reuse an existing item from the oredict, what modids should be given preference.
@@ -136,6 +137,11 @@ exnihilocreatio {
         # Max: 2147483647
         I:autoSieveRadius=2
 
+        # Base progress per click. Modified by haste and efficiency.
+        # Min: 0.009999999776482582
+        # Max: 1.0
+        D:baseProgress=0.10000000149011612
+
         # If enabled, all meshes can obtain the results from the lower tier meshes.
         # Note if the same item is registered in multiple tiers, then the higher tier
         # will have a chance to drop multiples.
@@ -151,6 +157,11 @@ exnihilocreatio {
         I:sieveSimilarRadius=2
 
         enchantments {
+            # Additional progress per level of efficiency.
+            # Min: 0.0
+            # Max: 1.7976931348623157E308
+            D:efficiencyScaleFactor=0.05
+
             # Enable the Sieve Efficiency enchantment.
             B:enableSieveEfficiency=true
 
@@ -162,6 +173,11 @@ exnihilocreatio {
 
             # If enabled haste beacons will increase the speed at which sieves function.
             B:hasteIncreasesSpeed=true
+
+            # Scaling factor for Haste sieving.
+            # Min: 0.0
+            # Max: 1.7976931348623157E308
+            D:hasteScaleFactor=1.0
 
             # Min: 1
             # Max: 2147483647
@@ -180,8 +196,11 @@ exnihilocreatio {
 
     compatibility {
         B:addYelloriteOreDict=true
-        B:dankNullIntegration=false
+        B:dankNullIntegration=true
         B:generalItemHandlerCompat=true
+
+        # Register Ex Nihilo hammers as Magneticraft hammers.
+        B:magneticraftHammersCompat=true
 
         # Prevents unidict from merging the ore chunks into normal ore.
         B:preventUnidict=true
@@ -276,10 +295,7 @@ exnihilocreatio {
     }
 
     witchwater {
-        # What is the maximum temperature a liquid can have and still be considered cold for interactions.
         I:coldCutoff=300
-
-        # What blocks can be made when witchwater interacts with a cold liquid.
         S:coldMixing <
             minecraft:dirt:0
             minecraft:dirt:1
@@ -288,8 +304,6 @@ exnihilocreatio {
 
         # Enable custom fluid mixing
         B:enableWitchWaterBlockForming=true
-
-        # What blocks can be made when witchwater interacts with a hot liquid.
         S:hotMixing <
             minecraft:cobblestone
             minecraft:stone:1
