--- a/config/jei/bookmarks.ini
+++ b/config/jei/bookmarks.ini
@@ -1,3 +1,5 @@
+T:{id:"minecraft:planks",Count:1b,Damage:0s}
+T:{id:"minecraft:glass",Count:1b,Damage:0s}
 T:{id:"tinkersaddons:modifier_item",Count:1b,Damage:4s}
 T:{id:"tinkersaddons:modifier_item",Count:1b,Damage:3s}
 T:{id:"tinkersaddons:modifier_item",Count:1b,Damage:2s}
