--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -39,7 +39,7 @@ world-1364632533 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=gunpo
+    S:filterText=solar
     B:overlayEnabled=true
 }
 
@@ -379,15 +379,6 @@ world-45927067 {
 }
 
 
-world-463349047 {
-    B:bookmarkOverlayEnabled=true
-    B:cheatItemsEnabled=true
-    B:editEnabled=false
-    S:filterText=@industr
-    B:overlayEnabled=true
-}
-
-
 world-497592332 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -496,7 +487,7 @@ world-758113961 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=servo
+    S:filterText=ely
     B:overlayEnabled=true
 }
 
@@ -623,22 +614,6 @@ world1262624706 {
 }
 
 
-world1314892008 {
-    # Show the list of bookmarks next to open GUIs.
-    B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
-    B:cheatItemsEnabled=false
-
-    # Hide and unhide ingredients by clicking them in the list.
-    B:editEnabled=false
-    S:filterText=@
-
-    # Show the list of ingredients next to open GUIs.
-    B:overlayEnabled=true
-}
-
-
 world1337475327 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -683,7 +658,7 @@ world1412520121 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=@scan
+    S:filterText=@steve woo
     B:overlayEnabled=true
 }
 
@@ -1004,6 +979,15 @@ world472321213 {
 }
 
 
+world49 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@proj wire
+    B:overlayEnabled=true
+}
+
+
 world512517539 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=false
@@ -1188,6 +1172,22 @@ world933792750 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=enderm
+    B:overlayEnabled=true
+}
+
+
+world934028340 {
+    # Show the list of bookmarks next to open GUIs.
+    B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=false
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=hopp
+
+    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
