--- a/config/magneticraft.cfg
+++ b/config/magneticraft.cfg
@@ -1,10 +1,14 @@
 # Configuration file
 
 general {
+    # Automatically focus the search bar in the shelving unit when you enter the GUI [default: true]
+    B:autoSelectSearchBar=true
+
     # Set players on fire when processing blaze rods in the crushing table [default: true]
     B:crushingTableCausesFire=true
 
-    # Unit of Heat to display, Celsius or Fahrenheit [default: true]
+    # Allow to power machines directly with RF [default: false]
+    B:enableDirectRFUsage=false
     B:heatUnitCelsius=true
 
     ores {
@@ -122,8 +126,20 @@ general {
         # Allow players to use the gui of the combustion generator [default: true]
         B:allowCombustionChamberGui=true
 
+        # Max distance the player can be from the conveyor belt to render its items, setting this value lower increases FPS
+        D:conveyorBeltItemRenderLimit=128.0
+
         # Scale of the gui with respect of the background image
         D:guideBookScale=1.5
+
+        # Unit of Heat to display, Celsius or Fahrenheit [default: true]
+        B:heatUnitCelsius=true
+
+        # When you search something in the shelving unit the JEI search bar will update with the same search text [default: false]
+        B:syncShelvingUnitSearchWithJei=false
+
+        # Character used to separate number like , in 1,000,000. Only one character will be used [default: ,]
+        S:thousandsSeparator=,
     }
 
     energy {
@@ -260,6 +276,26 @@ general {
 
         # Energy consumed every tick by the mining robot
         D:miningRobotPassiveConsumption=1.0
+    }
+
+    inserters {
+        # Ignore speed upgrades in inserters, they will be always applied [default: false]
+        B:infiniteInserterSpeedUpgrades=false
+
+        # Ignore stack upgrades in inserters, they will be always applied [default: false]
+        B:infiniteInserterStackUpgrades=false
+
+        # Default: delay between inserter animations in ticks
+        D:inserterDefaultDelay=10.0
+
+        # Default: amount of items to take with an inserter on each operation
+        I:inserterDefaultStackSize=8
+
+        # Upgraded: delay between inserter animations in ticks
+        D:inserterUpgradedDelay=5.0
+
+        # Upgraded: amount of items to take with an inserter on each operation
+        I:inserterUpgradedStackSize=64
     }
 
 }
