--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -3016,11 +3016,21 @@ fluids {
     S:fluid.plustic.alumite.grammar=
     S:fluid.plustic.alumite.instability.factor_accessibility=
     S:fluid.plustic.alumite.instability.factor_flat=
+    S:fluid.plustic.alumite.name.cardrank=
+    S:fluid.plustic.alumite.name.grammar=
+    S:fluid.plustic.alumite.name.instability.factor_accessibility=
+    S:fluid.plustic.alumite.name.instability.factor_flat=
+    S:fluid.plustic.alumite.name.seabanned=
     S:fluid.plustic.alumite.seabanned=
     S:fluid.plustic.elementium.cardrank=
     S:fluid.plustic.elementium.grammar=
     S:fluid.plustic.elementium.instability.factor_accessibility=
     S:fluid.plustic.elementium.instability.factor_flat=
+    S:fluid.plustic.elementium.name.cardrank=
+    S:fluid.plustic.elementium.name.grammar=
+    S:fluid.plustic.elementium.name.instability.factor_accessibility=
+    S:fluid.plustic.elementium.name.instability.factor_flat=
+    S:fluid.plustic.elementium.name.seabanned=
     S:fluid.plustic.elementium.seabanned=
     S:fluid.plustic.invar.cardrank=
     S:fluid.plustic.invar.grammar=
@@ -3036,11 +3046,21 @@ fluids {
     S:fluid.plustic.manasteel.grammar=
     S:fluid.plustic.manasteel.instability.factor_accessibility=
     S:fluid.plustic.manasteel.instability.factor_flat=
+    S:fluid.plustic.manasteel.name.cardrank=
+    S:fluid.plustic.manasteel.name.grammar=
+    S:fluid.plustic.manasteel.name.instability.factor_accessibility=
+    S:fluid.plustic.manasteel.name.instability.factor_flat=
+    S:fluid.plustic.manasteel.name.seabanned=
     S:fluid.plustic.manasteel.seabanned=
     S:fluid.plustic.mirion.cardrank=
     S:fluid.plustic.mirion.grammar=
     S:fluid.plustic.mirion.instability.factor_accessibility=
     S:fluid.plustic.mirion.instability.factor_flat=
+    S:fluid.plustic.mirion.name.cardrank=
+    S:fluid.plustic.mirion.name.grammar=
+    S:fluid.plustic.mirion.name.instability.factor_accessibility=
+    S:fluid.plustic.mirion.name.instability.factor_flat=
+    S:fluid.plustic.mirion.name.seabanned=
     S:fluid.plustic.mirion.seabanned=
     S:fluid.plustic.osgloglas.cardrank=
     S:fluid.plustic.osgloglas.grammar=
@@ -3061,6 +3081,11 @@ fluids {
     S:fluid.plustic.psimetal.grammar=
     S:fluid.plustic.psimetal.instability.factor_accessibility=
     S:fluid.plustic.psimetal.instability.factor_flat=
+    S:fluid.plustic.psimetal.name.cardrank=
+    S:fluid.plustic.psimetal.name.grammar=
+    S:fluid.plustic.psimetal.name.instability.factor_accessibility=
+    S:fluid.plustic.psimetal.name.instability.factor_flat=
+    S:fluid.plustic.psimetal.name.seabanned=
     S:fluid.plustic.psimetal.seabanned=
     S:fluid.plustic.refinedglowstone.cardrank=
     S:fluid.plustic.refinedglowstone.grammar=
@@ -3076,6 +3101,11 @@ fluids {
     S:fluid.plustic.terrasteel.grammar=
     S:fluid.plustic.terrasteel.instability.factor_accessibility=
     S:fluid.plustic.terrasteel.instability.factor_flat=
+    S:fluid.plustic.terrasteel.name.cardrank=
+    S:fluid.plustic.terrasteel.name.grammar=
+    S:fluid.plustic.terrasteel.name.instability.factor_accessibility=
+    S:fluid.plustic.terrasteel.name.instability.factor_flat=
+    S:fluid.plustic.terrasteel.name.seabanned=
     S:fluid.plustic.terrasteel.seabanned=
     S:fluid.plustic.thaumium.cardrank=
     S:fluid.plustic.thaumium.grammar=
