--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -739,7 +739,7 @@ symbol {
         B:modmat_fluid_quartz_nak_0.enabled=false
         B:modmat_fluid_quartz_nak_hot_0.enabled=false
         B:modmat_fluid_radaway_0.enabled=false
-        B:modmat_fluid_radaway_slow_0.enabled=false
+        B:modmat_fluid_radaway_slow_0.enabled=true
         B:modmat_fluid_redstone_nak_0.enabled=false
         B:modmat_fluid_redstone_nak_hot_0.enabled=false
         B:modmat_fluid_sic_vapor_0.enabled=false
@@ -934,7 +934,7 @@ symbol {
     }
 
     contenttweaker {
-        B:modmat_brine_0.enabled=false
+        B:modmat_brine_0.enabled=true
         B:modmat_crude_steel_0.enabled=false
         B:modmat_impuresteel_0.enabled=false
         B:modmat_irradiated_blood_0.enabled=false
@@ -990,11 +990,11 @@ symbol {
     }
 
     thaumicwonders {
-        B:modmat_fluid_quicksilver_0.enabled=false
+        B:modmat_fluid_quicksilver_0.enabled=true
     }
 
     thaumicbases {
-        B:modmat_pyro_0.enabled=false
+        B:modmat_pyro_0.enabled=true
     }
 
 }
