--- a/config/unidict/UniDict.cfg
+++ b/config/unidict/UniDict.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 1.12.2-2.9.2
+~CONFIG_VERSION: 1.12.2-2.9.6
 
 dump {
     # Enable this to keep track of all the entries.
@@ -35,7 +35,7 @@ general {
         ore
      >
 
-    # Put here itemstacks that you want don't want to ignore/not unify.
+    # Put here itemstacks that you want to ignore/not unify.
     # Example Format: minecraft:iron_ingot#0 [default: ]
     S:itemStacksNamesToIgnore <
      >
@@ -120,7 +120,7 @@ resources {
         ingot
         block
         plate
-	gear
+        gear
         rod
      >
 
@@ -204,13 +204,13 @@ resources {
     S:ownerOfEveryThing <
         minecraft
         thermalfoundation
-	contenttweaker
-	botania
-	projectred-core
-	nuclearcraft
+        contenttweaker
+        botania
+        projectred-core
+        nuclearcraft
         immersiveengineering
-	buildcraftcore
-	railcraft
+        buildcraftcore
+        railcraft
      >
 
     # add here recipes (names) that you don't want the Crafting Integration to mess with. [default: [minecraft:iron_nugget], [minecraft:iron_block], [minecraft:iron_ingot_from_block], [minecraft:iron_ingot_from_nuggets], [minecraft:gold_nugget], [minecraft:gold_ingot_from_block], [minecraft:gold_ingot_from_nuggets], [minecraft:gold_block]]
@@ -229,30 +229,30 @@ resources {
     # note: this will be executed after Crafting Integration.
     # note 2: if there is a space on the end of the recipe, then the recipe name must stay in "recipename", this is ONLY required when there is a space on the end " " [default: ]
     S:recipeToRemoveList <
-	unidict:dustconstantan_x2_size.2
+        unidict:dustconstantan_x2_size.2
         unidict:dustinvar_x3_size.3
         unidict:dustbronze_x4_size.4
         unidict:dustelectrum_x2_size.2
         unidict:ingotbronze_x4_size.4
-	"unidict:geariron_x9_shape. a aba a "
-	"unidict:geariron_x1_shape. a aba a "
-	"unidict:geargold_x9_shape. a aba a "
-	"unidict:geargold_x1_shape. a aba a "
-	"unidict:gearcopper_x9_shape. a aba a "
-	"unidict:gearcopper_x1_shape. a aba a "
-	"unidict:geartin_x9_shape. a aba a "
-	"unidict:geartin_x1_shape. a aba a "
-	"unidict:gearbronze_x9_shape. a aba a "
-	"unidict:gearbronze_x1_shape. a aba a "
-	"unidict:gearsilver_x9_shape. a aba a "
-	"unidict:gearsilver_x1_shape. a aba a "
-	"unidict:gearlead_x9_shape. a aba a "
-	"unidict:gearlead_x1_shape. a aba a "
-	"unidict:gearnickel_x9_shape. a aba a "
-	"unidict:gearnickel_x1_shape. a aba a "
-	"unidict:gearelectrum_x9_shape. a aba a "
-	"unidict:gearelectrum_x1_shape. a aba a "
-	"unidict:ingotbronze_x1_shape.aaaabaaaa"
+        "unidict:geariron_x9_shape. a aba a "
+        "unidict:geariron_x1_shape. a aba a "
+        "unidict:geargold_x9_shape. a aba a "
+        "unidict:geargold_x1_shape. a aba a "
+        "unidict:gearcopper_x9_shape. a aba a "
+        "unidict:gearcopper_x1_shape. a aba a "
+        "unidict:geartin_x9_shape. a aba a "
+        "unidict:geartin_x1_shape. a aba a "
+        "unidict:gearbronze_x9_shape. a aba a "
+        "unidict:gearbronze_x1_shape. a aba a "
+        "unidict:gearsilver_x9_shape. a aba a "
+        "unidict:gearsilver_x1_shape. a aba a "
+        "unidict:gearlead_x9_shape. a aba a "
+        "unidict:gearlead_x1_shape. a aba a "
+        "unidict:gearnickel_x9_shape. a aba a "
+        "unidict:gearnickel_x1_shape. a aba a "
+        "unidict:gearelectrum_x9_shape. a aba a "
+        "unidict:gearelectrum_x1_shape. a aba a "
+        "unidict:ingotbronze_x1_shape.aaaabaaaa"
      >
 
     # resources to be black-listed.
