--- a/config/InvTweaks/InvTweaks.cfg
+++ b/config/InvTweaks/InvTweaks.cfg
@@ -1,10 +1,10 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Sun Oct 27 20:47:57 CDT 2019
+#Mon Jun 08 22:03:45 CDT 2020
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
-enableAutoRefill=true
+enableAutoRefill=false
 autoRefillBeforeBreak=false
 autoRefillDamageThreshhold=5
 enableSounds=true
@@ -20,4 +20,4 @@ shortcutKeyToUpperSection=UP
 shortcutKeyToLowerSection=DOWN
 shortcutKeyDrop=LALT, RALT
 enableToolTipTreePath=false
-version=1.64+dev.146.2180b27
+version=1.64+dev.151.822d839
