--- a/config/buildcraft/detailed.properties
+++ b/config/buildcraft/detailed.properties
@@ -1,5 +1,5 @@
 # The buildcraft detailed configuration file. This contains a lot of miscellaneous options that have no affect on gameplay.
 # You should refer to the BC source code for a detailed description of what these do. (https://github.com/BuildCraft/BuildCraft)
 # This file will be overwritten every time that buildcraft starts, so don't change anything other than the values.
-#Mon Jan 13 22:54:56 CST 2020
+#Mon Jun 08 22:02:30 CDT 2020
 render.pipe.misc.inside.shade=0.725
