--- a/config/buildcraft/main.cfg
+++ b/config/buildcraft/main.cfg
@@ -89,6 +89,22 @@ general {
     # The minimum height that all quarry frames must be. A value of 1 will look strange when it drills the uppermost layer.
     I:quarryFrameMinHeight=4
 
+    # The maximum number of blocks that the quarry is allowed to mine each second.
+    # A value of 0 means no limit, and a value of 0.5 will mine up to half a block per second.
+    D:quarryMaxBlockMineRate=0.0
+
+    # The maximum number of blocks that a quarry is allowed to move, per second.
+    # A value of 0 means no limit.
+    D:quarryMaxFrameSpeed=0.0
+
+    # The maximum number of tasks that the quarry will do per tick.
+    # (Where a task is either breaking a block, or moving the frame)
+    I:quarryMaxTasksPerTick=4
+
+    # 1 divided by this value is added to the power cost for each additional task done per tick.
+    # A value of 0 disables this behaviour.
+    I:quarryPowerDivisor=2
+
     # How often, in ticks, should network update packets be sent? Increasing this might help network performance.
     I:updateFactor=10
 }
@@ -110,6 +126,9 @@ modules {
 performance {
     # Disable this if you get sub-standard framerates due to buildcraft's ~60 sprites animating every frame.
     B:enableAnimatedSprites=true
+
+    # The maximum number of items that the guide book will index.
+    I:guideItemSearchLimit=10000
 
     # The maximum number of search results to display in the guide book.
     I:maxGuideSearchResults=1200
@@ -216,6 +235,8 @@ worldgen {
          >
         B:excludedDimensionsIsBlacklist=true
         D:generationRate=1.0
+        B:oil_desert_biome=true
+        B:oil_ocean_biome=true
         S:surfaceDepositBiomes <
          >
 
