--- a/config/pyxislib.cfg
+++ b/config/pyxislib.cfg
@@ -1,9 +1,9 @@
 # Configuration file
 
 general {
-    # Setting this to false will disable the simple wrench item.
-    # Note that this can potentially hinder mods that use the wrench!
-    # [default: true]
+    # Setting this to true will enable the bundled wrench item.
+    # Remember to enable this if you have any mod that uses it!
+    # [default: false]
     B:enableWrench=true
 }
 
