Removed the redstone lootbag

--- a/config/Lootbags_BagConfig.cfg
+++ b/config/Lootbags_BagConfig.cfg
@@ -50,7 +50,7 @@ $STARTBAG:lootbag_Machine:0
 		quark:pipe:0:32:64:20
 		transloc:block_translocator:0:2:4:10
 		crossroads:multi_piston:0:4:8:10
-		buildcrafttransport:filtered_buffer:0:1:1:10
+		buildcrafttransport:filtered_buffer:0:2:4:5
 		funkylocomotion:pusher:0:1:2:10
 		funkylocomotion:slider:0:1:2:10
 		funkylocomotion:pusher:1:1:2:10
@@ -69,8 +69,8 @@ $STARTBAG:lootbag_Machine:0
 		immersiveengineering:conveyor:0:2:4:10:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|96|-32|73|-50|-49|43|75|-83|-52|47|10|-87|44|72|101|-112|-51|-52|-51|77|45|42|-50|44|75|77|-51|75|-49|-52|75|77|45|-54|-52|75|-73|42|46|-56|-55|44|41|73|45|98|0|0|1|-119|-64|28|50|0|0|0
 		immersiveengineering:conveyor:0:2:4:10:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|96|-32|73|-50|-49|43|75|-83|-52|47|10|-87|44|72|101|-112|-55|-52|-51|77|45|42|-50|44|75|77|-51|75|-49|-52|75|77|45|-54|-52|75|-73|74|41|-54|47|40|72|45|98|0|0|-81|-108|105|-68|49|0|0|0
 		immersiveengineering:conveyor:0:2:4:10:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|96|-32|73|-50|-49|43|75|-83|-52|47|10|-87|44|72|101|-112|-55|-52|-51|77|45|42|-50|44|75|77|-51|75|-49|-52|75|77|45|-54|-52|75|-73|74|-83|40|41|74|76|46|97|0|0|-119|-127|16|125|49|0|0|0
-		minecraft:rail:0:32:64:30
-		minecraft:golden_rail:0:16:32:30
+		minecraft:rail:0:32:64:20
+		minecraft:golden_rail:0:16:32:20
 		worsesolars:worse_solar_panel:0:2:4:5
 		immsersiveengineering:metal_device1:3:2:4:5
 		thermalfoundation:material:160:8:16:100
@@ -80,92 +80,24 @@ $STARTBAG:lootbag_Machine:0
 		buildcraftsilicon:plug_pulsar:0:2:4:25
 		additionalpipes:pipe_items_gravity_feed:0:2:4:10
 		buildcraftfactory:mining_well:0:2:4:10
-		buildcraftbuilders:quarry:0:1:1:2
+		buildcraftbuilders:quarry:0:1:1:4
 		buildcrafttransport:waterproof:0:32:64:10
 		buildcraftfactory:pump:0:1:1:5
 		buildcraftcore:engine:1:2:4:10
 		pneumaticcraft:liquid_hopper:0:2:4:10
 		immersiveengineering:connector:8:16:4:20
+		rftools:redstone_receiver_block:0:1:2:10
+		rftools:redstone_transmitter_block:0:1:2:10
+		projectred-transmission:wire:0:16:32:10
+		immersiveengineering:wirecoil:5:4:8:20
+		immersiveengineering:connector:12:8:16:20
+		factorytech:inventorysensor:0:2:4:10
+		randomthings:basicredstoneinterface:0:2:4:10
+		randomthings:inventorytester:0:2:4:10
+		botania:endereyeblock:0:1:1:10
+		buildcraftcore:engine:1:4:8:10
     $ENDWHITELIST
 $ENDBAG:lootbag_Machine
-$STARTBAG:lootbag_Redstone:1
-    $BAGCOLOR:231|76|60:133|146|158
-    $ISSECRET:false
-    $BAGTEXTCOLOR:$DARK_RED
-    $BAGTEXTUNOPENED:*Sparkle Sparkle*
-    $BAGTEXTOPENED:What's inside is not as interesting as not knowing.
-    $BAGTEXTSHIFT:Reward from completing Bounty Board jobs
-    $BAGVALUE:4:4
-    $PASSIVESPAWNWEIGHT:0
-    $PLAYERSPAWNWEIGHT:0
-    $MOBSPAWNWEIGHT:0
-    $BOSSSPAWNWEIGHT:0
-    $USEGENERALLOOTSOURCES:false
-    $MAXIMUMITEMS:5
-    $MINIMUMITEMS:3
-    $MAXIMUMGENERALLOOTWEIGHT:40
-    $MINIMUMGENERALLOOTWEIGHT:-1
-    $PREVENTITEMREPEATS:none
-    $EXCLUDEENTITIES:false
-    $STARTBLACKLIST
-        lootbags:itemlootbag:0
-    $ENDBLACKLIST
-    $STARTWHITELIST
-		projectred-transmission:wire:0:32:64:20
-		projectred-transmission:wire:1:32:64:10
-		projectred-transmission:wire:12:32:64:10
-		projectred-transmission:wire:14:32:64:10
-		projectred-transmission:wire:16:32:64:10
-		projectred-transmission:wire:15:32:64:10
-		projectred-transmission:wire:17:32:64:5
-		minecraft:redstone_torch:0:4:8:20
-		minecraft:observer:0:4:8:20
-		projectred-integration:gate:2:2:4:20
-		projectred-integration:gate:17:2:4:20
-		projectred-integration:gate:10:4:8:20
-		projectred-integration:gate:19:2:4:20
-		projectred-integration:gate:13:2:4:20
-		projectred-integration:gate:9:2:4:20
-		projectred-integration:gate:3:2:4:20
-		rftools:redstone_receiver_block:0:1:1:20
-		rftools:redstone_transmitter_block:0:1:1:20
-		minecraft:comparator:0:4:8:20
-		minecraft:repeater:0:4:8:20
-		minecraft:redstone_lamp:0:4:8:20
-		randomthings:contactlever:0:4:8:20
-		randomthings:basicredstoneinterface:0:4:8:20
-		randomthings:inventorytester:0:4:8:20
-		randomthings:contactbutton:0:4:8:10
-		projectred-illumination:light_button:0:4:8:1
-		botania:endereyeblock:0:1:1:10
-		projectred-illumination:lamp:29:4:8:5
-		projectred-illumination:lamp:13:4:8:5
-		projectred-illumination:light_button:13:4:8:1
-		projectred-illumination:lantern:13:4:8:5
-		projectred-illumination:inverted_lantern:13:4:8:5
-		projectred-illumination:lamp:27:4:8:20
-		projectred-illumination:lamp:3:4:8:20
-		projectred-illumination:light_button:14:8:1:1
-		projectred-illumination:lantern:14:8:1:5
-		projectred-illumination:inverted_lantern:14:8:1:5
-		projectred-illumination:lamp:30:4:8:5
-		projectred-illumination:lamp:14:4:8:5
-		projectred-illumination:light_button:14:4:8:1
-		projectred-illumination:lantern:14:4:8:5
-		projectred-illumination:inverted_lantern:14:4:8:5
-		practicallogistics2:node:0:1:2:20
-		practicallogistics2:holographicdisplay:0:1:1:10
-		practicallogistics2:datacable:0:16:32:10
-		practicallogistics2:networkreader:0:1:2:5
-		practicallogistics2:energyreader:0:1:2:5
-		practicallogistics2:fluidreader:0:1:2:5
-		practicallogistics2:redstonereceiver:0:1:2:10
-		practicallogistics2:redstoneemitter:0:1:2:10
-		factorytech:inventorysensor:0:1:2:10
-		immersiveengineering:connector:12:4:8:15
-		immersiveengineering:wirecoil:5:4:8:15
-    $ENDWHITELIST
-$ENDBAG:lootbag_Redstone
 $STARTBAG:lootbag_Exploration:2
     $BAGCOLOR:0|180|0:38|53|255
     $ISSECRET:false
