Added warp stone to explorer bag

--- a/config/Lootbags_BagConfig.cfg
+++ b/config/Lootbags_BagConfig.cfg
@@ -138,12 +138,12 @@ $STARTBAG:lootbag_Exploration:2
 		minecraft:quartz:0:32:64:20
 		minecraft:netherrack:0:32:64:20
 		minecraft:end_stone:0:32:64:10
-		minecraft:sapling:0:2:4:20
-		minecraft:sapling:1:2:4:20
-		minecraft:sapling:2:2:4:20
-		minecraft:sapling:3:2:4:20
-		minecraft:sapling:4:2:4:20
-		minecraft:sapling:5:2:4:20
+		minecraft:sapling:0:4:4:20
+		minecraft:sapling:1:4:4:20
+		minecraft:sapling:2:4:4:20
+		minecraft:sapling:3:4:4:20
+		minecraft:sapling:4:4:4:20
+		minecraft:sapling:5:4:4:20
 		minecraft:blaze_rod:0:2:4:20
 		tconstruct:slime_sapling:0:1:2:10
 		tconstruct:slime_sapling:1:1:2:10
@@ -282,5 +282,6 @@ $STARTBAG:lootbag_Exploration:2
 		quark:crystal:7:4:8:10
 		quark:crystal:8:4:8:10
 		minecraft:cactus:0:2:4:30
+		waystones:warp_stone:0:1:1:40
 	$ENDWHITELIST
 $ENDBAG:lootbag_Exploration
