--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1696,10 +1696,10 @@ world {
     B:"Crystal caves"=true
     B:"Default world options"=true
     B:"Depth mobs"=true
-    B:"Fairy rings"=false
+    B:"Fairy rings"=true
     B:Foxhounds=true
     B:Frogs=true
-    B:"Generate clay underground like dirt"=false
+    B:"Generate clay underground like dirt"=true
     B:"Guardians spawn in oceans"=true
     B:"Monster boxes"=true
     B:"Nether fossils"=true
