--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -111,6 +111,7 @@ crafting {
     B:appeng.decorative.solid.BlockSkyStone=true
     B:aroma1997.core.block.AromicBlock=true
     B:aroma1997.world.StickyOre=true
+    B:aroma1997.world.item.BlockMiningOre=true
     B:"binnie.extratrees.blocks.wood.BlockETLog$1"=true
     B:"binnie.extratrees.blocks.wood.BlockETPlank$1"=true
     B:biomesoplenty.common.block.BlockBOPAsh=true
@@ -131,6 +132,7 @@ crafting {
     B:ca.zenotek.sentek.blocks.BlockCore=true
     B:ca.zenotek.sentek.blocks.BlockNode=true
     B:cassiokf.industrialrenewal.blocks.BlockBase=true
+    B:cassiokf.industrialrenewal.blocks.BlockOredict=true
     B:charcoalPit.blocks.BlockBronzeReinforcedBrick=true
     B:charcoalPit.blocks.BlockCoke=true
     B:charcoalPit.blocks.BlockLogPile=true
@@ -159,6 +161,9 @@ crafting {
     B:com.ancient.thaumicgadgets.blocks.BlockSarcophagus=true
     B:com.ancient.thaumicgadgets.blocks.BlockTeleportatorCore=true
     B:com.cout970.magneticraft.block.core.BlockBase=true
+    B:com.creativemd.littletiles.common.block.BlockLTColored=true
+    B:com.creativemd.littletiles.common.block.BlockLTColored2=true
+    B:com.creativemd.littletiles.common.block.BlockStorageTile=true
     B:com.creativemd.littletiles.common.blocks.BlockLTColored=true
     B:com.creativemd.littletiles.common.blocks.BlockStorageTile=true
     B:com.creativemd.opf.block.BlockLittlePicFrame=true
@@ -197,6 +202,13 @@ crafting {
     B:com.gildedgames.aether.common.blocks.util.BlockBuilder=true
     B:com.gildedgames.aether.common.blocks.util.BlockCustomBookshelf=true
     B:com.gildedgames.aether.common.blocks.util.BlockCustomPackedIce=true
+    B:com.github.alexthe666.rats.server.blocks.BlockBrain=true
+    B:com.github.alexthe666.rats.server.blocks.BlockCheese=true
+    B:com.github.alexthe666.rats.server.blocks.BlockCompressedRat=true
+    B:com.github.alexthe666.rats.server.blocks.BlockGeneric=true
+    B:com.github.alexthe666.rats.server.blocks.BlockGenericFacing=true
+    B:com.github.alexthe666.rats.server.blocks.BlockGenericPillar=true
+    B:com.github.alexthe666.rats.server.blocks.BlockJackORatern=true
     B:com.globbypotato.rockhounding_rocks.blocks.decos.RocksA=true
     B:com.globbypotato.rockhounding_rocks.blocks.decos.RocksB=true
     B:com.globbypotato.rockhounding_rocks.blocks.decos.RocksC=true
@@ -253,6 +265,7 @@ crafting {
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
     B:com.progwml6.natura.overworld.block.logs.BlockRedwoodLog=true
     B:com.progwml6.natura.overworld.block.planks.BlockOverworldPlanks=true
+    B:com.raptor.sdu.block.BlockUnlimitedTrim=true
     B:com.teamacronymcoders.contenttweaker.modules.vanilla.blocks.BlockContent=true
     B:com.teamwizardry.refraction.common.block.BlockReflectiveAlloyBlock=true
     B:com.themastergeneral.moglowstone.blocks.GSBlock=true
@@ -278,6 +291,7 @@ crafting {
     B:com.wiresegal.naturalpledge.common.block.dendrics.thunder.BlockThunderLog=true
     B:com.wiresegal.naturalpledge.common.block.dendrics.thunder.BlockThunderPlanks=true
     B:com.xcompwiz.mystcraft.block.BlockCrystal=true
+    B:com.zeitheron.hammercore.internal.blocks.BlockBorderedCobblestone=true
     B:com.zerofall.ezstorage.block.BlockAccessTerminal=true
     B:com.zerofall.ezstorage.block.BlockBlankBox=true
     B:com.zerofall.ezstorage.block.BlockCondensedStorage=true
@@ -304,6 +318,12 @@ crafting {
     B:forestry.core.blocks.BlockAshBrick=true
     B:forestry.core.blocks.BlockResourceOre=true
     B:forestry.core.blocks.BlockResourceStorage=true
+    B:growthcraft.apples.common.block.BlockAppleLog=true
+    B:growthcraft.apples.common.block.BlockApplePlanks=true
+    B:growthcraft.bamboo.common.block.BlockBambooPlank=true
+    B:growthcraft.cellar.common.block.BlockCorkLog=true
+    B:growthcraft.core.common.block.BlockSalt=true
+    B:growthcraft.core.common.block.BlockSaltOre=true
     B:ivorius.reccomplex.block.BlockGenericSolid=true
     B:knightminer.ceramics.blocks.BlockClayHard=true
     B:knightminer.ceramics.blocks.BlockClayRainbow=true
@@ -515,18 +535,27 @@ crafting {
     B:quaternary.dazzle.common.block.BlockAnalogLamp=true
     B:quaternary.dazzle.common.block.BlockDigitalLamp=true
     B:quaternary.incorporeal.block.BlockCorporeaRetainerDecrementer=true
+    B:quaternary.incorporeal.feature.corporetics.block.BlockCorporeaRetainerDecrementer=true
+    B:quaternary.incorporeal.feature.decorative.block.BlockCorporeaDeco=true
+    B:quaternary.incorporeal.feature.decorative.block.BlockRedStringDeco=true
     B:rustic.common.blocks.BlockBase=true
     B:rustic.common.blocks.BlockClayWallDiag=true
     B:rustic.common.blocks.BlockFertileSoil=true
     B:rustic.common.blocks.BlockLogRustic=true
     B:rustic.common.blocks.BlockPillar=true
     B:rustic.common.blocks.BlockPlanksRustic=true
+    B:sandro.RedstonePlusPlus.Modules.ImprovedPistons.HalfBlocks.BlockCompressedCobblestone=true
+    B:sandro.RedstonePlusPlus.Modules.ImprovedPistons.HalfBlocks.BlockHalfObsidian=true
+    B:sandro.RedstonePlusPlus.Modules.ImprovedPistons.HalfBlocks.BlockHalfRedstone=true
+    B:sandro.RedstonePlusPlus.Modules.Miscellaneous.DebugBlock.BlockDebug=true
+    B:sandro.RedstonePlusPlus.Modules.Miscellaneous.SeaLanterns.BlockSeaLanternFix=true
     B:shadows.fastbench.block.BlockFastBench=true
     B:shetiphian.terraqueous.common.block.BlockPlanks=true
     B:shetiphian.terraqueous.common.block.BlockTreeTrunk=true
     B:shnupbups.tinkersaether.blocks.TABlock=true
     B:slimeknights.tconstruct.gadgets.block.BlockBrownstone=true
     B:slimeknights.tconstruct.gadgets.block.BlockDriedClay=true
+    B:slimeknights.tconstruct.plugin.quark.block.BlockSlimeQuark=true
     B:slimeknights.tconstruct.shared.block.BlockClearGlass=true
     B:slimeknights.tconstruct.shared.block.BlockClearStainedGlass=true
     B:slimeknights.tconstruct.shared.block.BlockDecoGround=true
@@ -547,11 +576,17 @@ crafting {
     B:"team.chisel.Features$31$1"=true
     B:"team.chisel.Features$32$1"=true
     B:"team.chisel.Features$33$1"=true
+    B:"team.chisel.Features$34$1"=true
+    B:"team.chisel.Features$35$1"=true
     B:"team.chisel.Features$37$1"=true
     B:"team.chisel.Features$49$1"=true
+    B:"team.chisel.Features$51$1"=true
     B:"team.chisel.Features$57$1"=true
+    B:"team.chisel.Features$59$1"=true
     B:"team.chisel.Features$7$1"=true
     B:"team.chisel.Features$73"=true
+    B:"team.chisel.Features$76"=true
+    B:"team.chisel.Features$8$1"=true
     B:team.chisel.common.block.BlockCarvable=true
     B:team.chisel.common.block.BlockCarvableCarpet=true
     B:techreborn.blocks.BlockFusionCoil=true
@@ -596,6 +631,7 @@ crafting {
     B:vazkii.botania.common.block.mana.BlockAlchemyCatalyst=true
     B:vazkii.botania.common.block.mana.BlockConjurationCatalyst=true
     B:vazkii.psi.common.block.BlockPsiDecorative=true
+    B:vazkii.quark.automation.block.BlockGravisand=true
     B:vazkii.quark.automation.block.BlockSugar=true
     B:vazkii.quark.building.block.BlockBark=true
     B:vazkii.quark.building.block.BlockCarvedWood=true
@@ -619,21 +655,28 @@ crafting {
     B:vazkii.quark.building.block.BlockStainedPlanks=true
     B:vazkii.quark.building.block.BlockSturdyStone=true
     B:vazkii.quark.building.block.BlockThatch=true
+    B:vazkii.quark.building.block.BlockTurf=true
     B:vazkii.quark.building.block.BlockVerticalPlanks=true
     B:vazkii.quark.building.block.BlockVerticalStainedPlanks=true
     B:vazkii.quark.building.block.BlockWorldStoneBricks=true
+    B:vazkii.quark.building.block.BlockWorldStoneCarved=true
     B:vazkii.quark.building.block.BlockWorldStonePavement=true
     B:vazkii.quark.decoration.block.BlockBlazeLantern=true
     B:vazkii.quark.decoration.block.BlockCharcoal=true
     B:vazkii.quark.decoration.block.BlockCustomBookshelf=true
     B:vazkii.quark.decoration.block.BlockLitLamp=true
     B:vazkii.quark.world.block.BlockBasalt=true
+    B:vazkii.quark.world.block.BlockBiomeBrick=true
     B:vazkii.quark.world.block.BlockBiomeCobblestone=true
     B:vazkii.quark.world.block.BlockBiotite=true
     B:vazkii.quark.world.block.BlockBiotiteOre=true
     B:vazkii.quark.world.block.BlockCrystal=true
+    B:vazkii.quark.world.block.BlockElderPrismarine=true
+    B:vazkii.quark.world.block.BlockElderSeaLantern=true
+    B:vazkii.quark.world.block.BlockJasper=true
     B:vazkii.quark.world.block.BlockLimestone=true
     B:vazkii.quark.world.block.BlockMarble=true
+    B:vazkii.quark.world.block.BlockSlate=true
     B:vswe.stevescarts.blocks.BlockMetalStorage=true
     B:zmaster587.advancedRocketry.block.BlockCharcoalLog=true
     B:zmaster587.advancedRocketry.block.BlockIntake=true
